--- a/front-developers-games/.eslintrc.json
+++ b/front-developers-games/.eslintrc.json
@@ -26,6 +26,7 @@
             "error",
             "windows"
         ],
-        "react/prop-types": 0
+        "react/prop-types": 0,
+        "no-unused-expressions": 0
     }
 }
