--- a/back-developers-games/package.json
+++ b/back-developers-games/package.json
@@ -19,9 +19,11 @@
     "debug": "^4.3.1",
     "dotenv": "^9.0.2",
     "express": "^4.17.1",
+    "generate-password": "^1.6.0",
     "jest": "^26.6.3",
     "mongoose": "^5.10.17",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.6.0",
     "nodemon": "^2.0.6"
   },
   "devDependencies": {
