Front loading team Challenges

--- a/front-developers-games/.eslintrc.json
+++ b/front-developers-games/.eslintrc.json
@@ -27,6 +27,7 @@
             "windows"
         ],
         "react/prop-types": 0,
-        "no-unused-expressions": 0
+        "no-unused-expressions": 0,
+        "no-underscore-dangle": 0
     }
 }
