Implement change avatar in teamProfile

--- a/front-developers-games/.eslintrc.json
+++ b/front-developers-games/.eslintrc.json
@@ -28,6 +28,10 @@
         ],
         "react/prop-types": 0,
         "no-unused-expressions": 0,
-        "no-underscore-dangle": 0
+        "no-underscore-dangle": 0,
+        "jsx-a11y/click-events-have-key-events": 0,
+        "jsx-a11y/no-noninteractive-element-interactions": 0,
+        "jsx-a11y/label-has-associated-control": 0
+
     }
 }
