Try to generate zip from backend

--- a/back-developers-games/package.json
+++ b/back-developers-games/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@google-cloud/storage": "^5.8.5",
+    "archiver": "^5.3.0",
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
@@ -20,8 +21,11 @@
     "dotenv": "^9.0.2",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
+    "file-saver": "^2.0.5",
     "generate-password": "^1.6.0",
     "jest": "^26.6.3",
+    "jszip": "^3.6.0",
+    "jszip-utils": "^0.1.0",
     "mongoose": "^5.10.17",
     "morgan": "^1.10.0",
     "nodemailer": "^6.6.0",
