--- a/back-developers-games/app.yaml
+++ b/back-developers-games/app.yaml
@@ -1,4 +1,8 @@
 runtime: nodejs
 env: flex
+manual_scaling:
+  instances: 1
 resources:
-  memory_gb: 2
+  cpu: 1
+  memory_gb: 0.5
+  disk_size_gb: 15
