--- a/front-developers-games/.eslintrc.json
+++ b/front-developers-games/.eslintrc.json
@@ -31,7 +31,9 @@
         "no-underscore-dangle": 0,
         "jsx-a11y/click-events-have-key-events": 0,
         "jsx-a11y/no-noninteractive-element-interactions": 0,
-        "jsx-a11y/label-has-associated-control": 0
+        "jsx-a11y/label-has-associated-control": 0,
+        "jsx-a11y/no-static-element-interactions": 0,
+        "jsx-a11y/media-has-caption": 0
 
     }
 }
