--- a/back-developers-games/package.json
+++ b/back-developers-games/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@google-cloud/storage": "^5.8.5",
     "axios": "^0.21.1",
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "debug": "^4.3.1",
