--- a/back-developers-games/package.json
+++ b/back-developers-games/package.json
@@ -23,10 +23,13 @@
     "express-fileupload": "^1.2.1",
     "generate-password": "^1.6.0",
     "jest": "^26.6.3",
+    "jszip": "^3.7.1",
+    "jszip-utils": "^0.1.0",
     "mongoose": "^5.10.17",
     "morgan": "^1.10.0",
     "nodemailer": "^6.6.0",
-    "nodemon": "^2.0.6"
+    "nodemon": "^2.0.6",
+    "save-as": "^0.1.8"
   },
   "devDependencies": {
     "eslint": "^7.26.0",
