--- a/front-developers-games/package.json
+++ b/front-developers-games/package.json
@@ -8,7 +8,8 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "file-saver": "^2.0.5",
-    "jszip": "^3.6.0",
+    "jszip": "^3.7.1",
+    "jszip-utils": "^0.1.0",
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
@@ -19,6 +20,7 @@
     "react-scripts": "4.0.3",
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
+    "save-as": "^0.1.8",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
